# quiz-bar-service

./: .env.example  .gitignore  CODE_STYLE.md  ELECTRON_INTEGRATION.md  README.md  agents.md  main.py  old.md  pyproject.toml
docs/: architecture.md  debugging.md  observability.md  prompts.md
src/barquiz/: api.py  config.py  logging_config.py  models.py
src/barquiz/core/: data.py  generator.py
src/barquiz/utils/: http_client.py  ollama.py  search.py
