[project]
name = "quiz-bar-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "ddgs>=9.9.1",
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "ollama>=0.6.1",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
]


[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "barquiz"  # имя пакета в src/barquiz
module-root = "src"      # src-layout
